@@ -36,6 +36,7 @@ version <next>:
 - sdl2 support for ffplay
 - sdl1 output device and sdl1 support removed
 - extended mov edit list support
+- libfaac encoder removed
 
 
 version 3.1:
